--- a/client/index.html
+++ b/client/index.html
@@ -10,16 +10,19 @@
 </head>
 
 <body>
+    <header>
+        <h1>TAREFAS</h1>
+    </header>
     <main>
         <section class="register">
             <form>
                 <input type="text" id="task" name="task">
-                <button class="btn-add">ADICIONAR</button>
+                <div class="btn-add"><img src="./assets/images/plus.png"></div>
             </form>
-            <div class="card">
-                <button class="btn-delete">deletar</button>
+            <div class="card hide">
                 <button class="btn-edit">editar</button>
-                <button class="btn-close">close</button>
+                <button class="btn-delete">deletar</button>
+                <button class="btn-close">X</button>
             </div>
         </section>
         <section class="response">
